apps/base/clients-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clients-api
  namespace: clients
  labels:
    app: clients-api
spec:
  selector:
    app: clients-api
  ports:
    - port: 80
      targetPort: 8080
      name: http
